specs/blueprints/errors/validation/expected_lists_got_fieldset.eno
# Expecting lists but getting a fieldset with one item

-- input
fieldset:
entry = value
-- input

-- javascript
eno.parse(input).lists('fieldset');
-- javascript

-- php
Eno\Parser::parse($input)->lists('fieldset');
-- php

-- python
enolib.parse(input).lists('fieldset')
-- python

-- ruby
Eno.parse(input).lists('fieldset')
-- ruby

## ValidationError

-- text
Only lists with the key 'fieldset' were expected, but a fieldset with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | entry = value
-- snippet

selection: [0,0] => [1,13]


# Expecting lists but getting a fieldset with empty lines and multiple entries

-- input
fieldset:

entry = value

entry = value

entry = value

-- input

-- javascript
eno.parse(input).lists('fieldset');
-- javascript

-- php
Eno\Parser::parse($input)->lists('fieldset');
-- php

-- python
enolib.parse(input).lists('fieldset')
-- python

-- ruby
Eno.parse(input).lists('fieldset')
-- ruby

## ValidationError

-- text
Only lists with the key 'fieldset' were expected, but a fieldset with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | 
 *    3 | entry = value
 *    4 | 
 *    5 | entry = value
 *    6 | 
 *    7 | entry = value
      8 | 
-- snippet

selection: [0,0] => [6,13]

# Expecting lists but getting a fieldset with two entries with comments

-- input
fieldset:
> comment
entry = value

> comment
entry = value
-- input

-- javascript
eno.parse(input).lists('fieldset');
-- javascript

-- php
Eno\Parser::parse($input)->lists('fieldset');
-- php

-- python
enolib.parse(input).lists('fieldset')
-- python

-- ruby
Eno.parse(input).lists('fieldset')
-- ruby

## ValidationError

-- text
Only lists with the key 'fieldset' were expected, but a fieldset with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | > comment
 *    3 | entry = value
 *    4 | 
 *    5 | > comment
 *    6 | entry = value
-- snippet

selection: [0,0] => [5,13]
